<resources>
    <string name="app_name">Hotels Haven</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!--  Strings arrays used in Spinner widgets -->
    <string-array name="adultGuestArray">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
    </string-array>
    <string-array name="childrenGuestArray">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
    <string-array name="childrenGuestAgeArray">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
        <item name="10">10</item>
        <item name="11">11</item>
        <item name="12">12</item>
        <item name="13">13</item>
        <item name="14">14</item>
        <item name="15">15</item>
        <item name="16">16</item>
        <item name="17">17</item>
    </string-array>
    <string-array name="roomArray">
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
        <item name="6">6</item>
        <item name="7">7</item>
        <item name="8">8</item>
        <item name="9">9</item>
    </string-array>


    <!--  labels for widgets -->
    <string name="destinationText">Destination</string>
    <string name="checkInDate">Check-in Date</string>
    <string name="checkOutDate">Check-out Date</string>
    <string name="adultGuest">Adults</string>
    <string name="childrenGuest">Children</string>
    <string name="roomDropdown">Rooms</string>

    <!--  Hotels Haven text descriptions -->
    <string name="childrenAgesMultiple">Ages of children at checkout</string>
    <string name="childAgeSingle">Age of child at checkout</string>
    <string name="submitButton">Find Hotels</string>
    <string name="destinationPlaceholderText">City, town, postcode</string>
    <string name="dateHintText">dd MMM yyyy</string>
    <string name="about">About us</string>
    <string name="terms">Terms and Conditions</string>
    <string name="privacy">Privacy Policy</string>
    <string name="hotelscombinedUrl"></string>
    <string name="lateroomUrl"></string>
    <string name="interstitialText"></string>
    <string name="url">www.hotelshaven.com</string>

    <!-- Huge Text for Policy and T%C -->
    <string name="aboutus">Welcome to Hotels Haven!</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="title_activity_twitter">TwitterActivity</string>
    <string name="title_activity_instagram">InstagramActivity</string>

</resources>
