<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pool"
    android:id="@+id/hh_relative_layout"
    android:fadingEdge="horizontal"
    android:orientation="vertical">

    <!--LinearLayout
        android:id="@+id/hh_relative_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:weightSum="1"-->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="2dp"
            android:src="@drawable/tlogo44" />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="0dp"
            android:shadowColor="@android:color/black"
            android:shadowDx="4"
            android:shadowDy="4"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <TextView
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:text="@string/destinationText"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white"
            android:textStyle="bold|italic"
            android:typeface="serif" />

        <EditText
            android:id="@+id/destinationedittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:fadingEdgeLength="10dp"
            android:hint="@string/destinationPlaceholderText"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold">

            <requestFocus />
        </EditText>

        <TableLayout
            android:id="@+id/tableLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/checkinText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/checkInDate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/checkoutText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="@string/checkOutDate"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="0dp">

                <EditText
                    android:id="@+id/checkinDate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="29dp"
                    android:ems="10"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <EditText
                    android:id="@+id/checkoutDate"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="48dp"
                    android:ems="10"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="15dp">

                <TextView
                    android:id="@+id/adultText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="0dp"
                    android:text="@string/adultGuest"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/childrenText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="51dp"
                    android:text="@string/childrenGuest"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

                <TextView
                    android:id="@+id/roomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="47dp"
                    android:text="@string/roomDropdown"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@android:color/white"
                    android:textSize="18dp"
                    android:textStyle="bold|italic"
                    android:typeface="serif" />

            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="0dp">

                <Spinner
                    android:id="@+id/adultSpinner"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:entries="@array/adultGuestArray" />

                <Spinner
                    android:id="@+id/childrenSpinner"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="42dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:entries="@array/childrenGuestArray" />

                <Spinner
                    android:id="@+id/roomSpinner"
                    android:layout_width="50dp"
                    android:layout_height="35dp"
                    android:layout_marginRight="37dp"
                    android:layout_weight="1"
                    android:background="@android:color/white"
                    android:entries="@array/roomArray" />
            </TableRow>
        </TableLayout>

        <!-- Button for searching for hotels, when pressed -->
        <Button
            android:id="@+id/findhotels"
            android:layout_width="158dp"
            android:layout_height="51dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@android:color/transparent"
            android:fadingEdge="vertical"
            android:longClickable="true"
            android:nextFocusRight="@android:color/holo_blue_dark"
            android:text="@string/submitButton"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:visibility="visible" />

    <!--/LinearLayout-->

</LinearLayout>